--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NuxtClassSample",
+  "name": "nuxt-class-sample",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -15,6 +15,7 @@
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
     "vue-server-renderer": "^2.6.14",
+    "vue-tailwind": "^2.5.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
